css/style.css
/*** RESET ***/

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}



/*** GLOBAL ***/

body {
  font-family: "Edu TAS Beginner", cursive;
  font-optical-sizing: auto;
  background-image: url(../img/cork.png);
  position: relative;
}

.clickable:hover {
  cursor: pointer;
}



/*** HEADER ***/

header {
  background-image: url(../img/wall.png);
  padding: 25px;
  margin-bottom: 30px;
}

h1 {
  font-size: 4rem;
  text-transform: uppercase;
  text-align: center;
}



/*** MAIN ***/

main {
  padding: 20px;
}

.container {
  margin: 0 auto;
  max-width: calc((300px * 3) + 50px);
  display: flex;
  flex-wrap: wrap;
  gap: 25px;
}

.card-body {
  background-color: #ffffff;
  padding: 16px;
  max-width: calc((100% - 50px) / 3);
  display: flex;
  flex-direction: column;
  position: relative;
  box-shadow: 3px 3px 3px rgba(0, 0, 0, 30%);
}

.card-body:hover {
  z-index: 1;
  transform: scale(1.1) rotate(10deg);
  box-shadow: 10px 10px 10px rgba(0, 0, 0, 30%);
  transition: all 1s;
}

.card-image {
  max-width: 600px;
  max-height: 600px;
  margin: 0 auto;
  margin-bottom: 10px;
}

.card-image img {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
}

.card-body h6 {
  font-family: "Sometype Mono", monospace;
  font-optical-sizing: auto;
  font-size: 18px;
  color: #777777;
  margin-bottom: 10px;
}

.card-body h5 {
  font-size: 24px;
  margin-bottom: 10px;
  text-transform: uppercase;
}

.pin {
  position: absolute;
  top: -8px;
  left: 50%;
  translate: -50% 0;
}

.card-body:hover .pin {
  display: none;
}



/*** OVERLAY ***/

.overlay {
  background-color: rgba(0, 0, 0, 50%);
  padding: 20px;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 100vh;
  display: none;
}

.active {
  display: block;
}

.close-btn {
  margin: 0 auto;
  padding: 10px 12px;
  display: block;
  margin-bottom: 40px;
}



/*** MEDIA QUERIES ***/

@media (max-width: calc((300px * 3) + 50px + 40px)) {

  .container {
    max-width: calc((300px * 2) + 25px);
  }

  .card-body {
    max-width: calc((100% - 25px) / 2);
  }
}

@media (max-width: calc((300px * 2) + 25px + 40px)) {

  .container {
    max-width: 300px;
  }

  .card-body {
    max-width: 100%
  }
}

